syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.notification_service.notification";
option java_outer_classname = "NotificationProto";

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string message = 1;
  string idempotencyKey = 2;
}

message NotificationResponse {
  string status = 1;
}